Add font optimization for the ttf files

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-virtual": "^2.0.3",
+    "fonteditor-core": "^2.1.8",
     "babel-plugin-inline-json-import": "^0.3.2",
     "axios": "^0.20.0",
     "chalk": "^4.1.0",
